# ocr_pipeline

./: .gitignore  00 初步構想.md  02 API規格.md  03 作業範本規格.md  04 專案規格.md  PROJECT_STATUS_REPORT.md  README.md  REFACTORING_PLAN_V3_AGGRESSIVE.md  TODO.md  check_anchor.py  pyproject.toml  pytest.ini  requirements.txt
config/schemas/: template-v1.0.json
config/templates/: README.md  tw_einvoice_hybrid.json
data/samples/: README.md
dev_report/01/: TEST_UPDATE_REPORT.md
dev_report/02/: REFACTORING_REPORT.md
dev_report/03/: VERIFICATION_REPORT.md  validate_templates.py
dev_report/04/: CLEANUP_REPORT.md  PROJECT_STATUS_REPORT_OLD.md  REFACTORING_PLAN.md  REFACTORING_PLAN_V2.md
docs/: 01 設計架構.md  hybrid_extraction_strategy.md  template_schema_specification.md
examples/: quick_ocr_test.py  taiwan_einvoice_demo.py
ocr_pipeline/: __init__.py
ocr_pipeline/adapters/: __init__.py
ocr_pipeline/adapters/ocr/: __init__.py  paddleocr_adapter.py
ocr_pipeline/core/: __init__.py  orchestrator.py
ocr_pipeline/core/extractors/: __init__.py  hybrid_extractor.py
ocr_pipeline/template/: __init__.py  validator.py
ocr_pipeline/utils/: __init__.py  file_utils.py  image_utils.py
roi_sample_tool/: .gitignore  CONVERSATION_ARCHIVE.md  PROFILE_GUIDE.md  README.md  RoiSampler.sln  TODO.md  test_template_v1.json
roi_sample_tool/src/RoiSampler.App/: App.axaml  App.axaml.cs  (+4 more)
sample_images/: tw_einvoice_v1_template.json
tests/: test_file_utils.py  test_hybrid_extractor.py  test_image_utils.py  test_orchestrator.py  test_paddleocr_adapter.py  test_template_validator.py
(+24 files in other folders)
