[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-pipeline"
version = "0.1.0"
description = "模組化、可配置、可擴充的 OCR 辨識生產流程系統"
readme = "05 README.md"
requires-python = ">=3.8"
authors = [
    {name = "OCR Pipeline Team"}
]
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
    "Pillow>=9.0.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
]

[tool.setuptools]
packages = ["ocr_pipeline"]

[tool.setuptools.package-data]
ocr_pipeline = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
ocr = [
    "paddlepaddle>=2.4.0",
    "paddleocr>=2.6.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=ocr_pipeline",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
